# -ColorStructure

./: .gitignore  CMakeLists.txt  Color.h  ColorSequence.cpp  ColorSequence.h  ColorSet.cpp  ColorSet.h  README.md  main.cpp
src/: CMakeLists.txt  Color.cpp  Color.h  ColorSequence.cpp  ColorSequence.h  ColorSet.cpp  ColorSet.h
tests/: CMakeLists.txt  ColorStructureTest.cpp
